# Azurite

./: Cargo.toml  TODO
audio_lib/: Cargo.toml
examples/audio/: Cargo.toml
examples/audio/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs  lib2.rs  win32.rs  window.rs
lib/src/win32/: mod.rs
window/: Cargo.toml  build.rs
window/examples/: window.rs
