[package]
name = "azurite"
description = "A WIP multimedia creative engine"
license = "GPL-3.0"
version = "0.1.0"
authors = ["Geert Depuydt <geert_depuydt@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.8"
features = [
    #"combaseapi",
    #"commctrl",
    #"dwmapi",
    #"errhandlingapi",
    #"hidusage",
    #"libloaderapi",
    #"objbase",
    #"ole2",
    #"processthreadsapi",
    #"shellapi",
    #"shellscalingapi",
    #"shobjidl_core",
    #"unknwnbase",
    #"winbase",
    #"windowsx",
    #"winerror",
    #"wingdi",
    #"winnt",
    #"winuser",
]
