[package]
name = "window"
description = "Create a window"
license = "GPL-3.0"
version = "0.1.0"
authors = ["Geert Depuydt <geert_depuydt@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

